Update for Patch v3.6.0 - checksum: 0028

--- a/mod/thmod/localisation/english/modifiers_3_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_3_l_english.yml
@@ -51,7 +51,7 @@
  edict_improved_work_environment_desc:0 "Spending time and resources to improve the working conditions of our people will surely result in better results and happier workers.\n\n"
  edict_renewable_energy:0 "ริเริ่มการปรับปรุงด้านพลังงาน"
  edict_renewable_energy_desc:0 "We can further limit the use of toxic fuels and non-renewable resources in order to promote research into new methods of energy production. This could help us come closer to a perfect energy cycle and improve the environment for our people to enjoy.\n\n"
- edict_super_sensors:0 "ค้นหาเซนเซอร์ที่ครอบคลุมมากขึ้น"
+ edict_super_sensors:0 "ค้นหาเซ็นเซอร์ที่ครอบคลุมมากขึ้น"
  edict_super_sensors_desc:0 "After having researched advanced sensor technology we have enough information to pour extra resources into enhancing our own search scans. Our technicians would have an easier time finding objects of interest at the edge of our systems with this initiative.\n\n"
  acid_jungles:0 "Acid Jungles"
  acid_jungles_desc:0 "Evolution has produced trees and foliage that exude acids and make the terrain dangerous to traverse or settle in."
