--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -1,9 +1,11 @@
 ﻿l_english:
+ MOD_FEDERATION_EXPERIENCE_ADD:0 "ประสบการณ์ต่อเดือน"
  MOD_FEDERATION_COHESION_ADD:0 "ความสัมพันธ์ในสหพันธ์ต่อเดือน"
  MOD_FEDERATION_COHESION_ETHICS_PENALTY_MULT:0 "โทษของจริยธรรมที่แตกต่างกันของสมาชิกที่มีผลต่อความสัมพันธ์ในสหพันธ์"
  MOD_FEDERATION_FLEET_COUNTRIBUTION_FACTOR:0 "การมีส่วนร่วมของกองยาน"
  MOD_FEDERATION_JOIN_MALUS_MULT:0 "ความสัมพันธ์ในสหพันธ์เมื่อเข้าร่วม"
  MOD_FEDERATION_LEAVE_MALUS_MULT:0 "ความสัมพันธ์ในสหพันธ์เมื่อออก"
+ MOD_FEDERATION_ENVOY_COHESION_EFFECT_MULT:0 "Federation Cohesion from Assigned Envoys"
  MOD_BLANK_MODIFIER:0 "Blank Modifier"
  MOD_COUNTRY_OCCUPATION_ARMIES_ADD:0 "ทหารรักษาการณ์เพื่อการยึดครองสูงสุด"
  MOD_COUNTRY_WAR_EXHAUSTION_MULT:0 "ความอิดโรยจากสงคราม"
@@ -26,7 +28,7 @@
  MOD_COUNTRY_EDICT_COST:0 "ค่าใช้จ่ายของประกาศคำสั่ง"
  MOD_COUNTRY_EDICT_COST_DESC:0 "Affects the cost of all Edicts enacted within the Empire, increasing or reducing the cost of enabling them."
  MOD_COUNTRY_LEADER_CAP:0 "จำนวนผู้นำจักรวรรดิ"
- MOD_COUNTRY_SENSOR_RANGE_MULT:0 "ระยะเซนเซอร์ของจักรวรรดิ"
+ MOD_COUNTRY_SENSOR_RANGE_MULT:0 "ระยะเซ็นเซอร์ของจักรวรรดิ"
  MOD_COUNTRY_EDICT_LENGTH_MULT:2 "ระยะเวลาของประกาศคำสั่ง"
  MOD_COUNTRY_EDICT_LENGTH_MULT_DESC:1 "Affects the duration of all Planetary Edicts enacted within the Empire, increasing or reducing the amount of time they are active."
  MOD_COUNTRY_EDICT_FUND_ADD:0 "กองทุนสำหรับประกาศคำสั่ง"
@@ -232,8 +234,10 @@
  MOD_SHIP_ARMOR_MULT:1 "HP เกราะ"
  MOD_SHIP_SHIELD_DAMAGE_MULT:0 "ทำความเสียหายกับโล่พลังงาน"
  MOD_SHIP_SHIELD_PENETRATION_MULT:0 "เจาะโล่พลังงาน"
+ MOD_SHIP_SHIELD_HARDENING_ADD:0 "เสริมความแข็งแกร่งให้โล่พลังงาน"
  MOD_SHIP_ARMOR_DAMAGE_MULT:0 "ทำความเสียหายกับเกราะ"
  MOD_SHIP_ARMOR_PENETRATION_MULT:0 "เจาะเกราะ"
+ MOD_SHIP_ARMOR_HARDENING_ADD:0 "เสริมความแข็งแกร่งให้เกราะ"
  MOD_SHIP_BASE_SPEED_MULT:0 "ความเร็วยานพื้นฐาน"
  MOD_SHIP_SPEED_MULT:0 "ความเร็วต่ำกว่าแสง"
  MOD_SHIP_LANDING_TIME_MULT:0 "เวลาลงจอด"
@@ -274,11 +278,12 @@
  MOD_SHIP_COMBAT_SPEED_MULT:2 "ความเร็วในการต่อสู้"
  MOD_SHIP_DISENGAGE_CHANCE_MULT:0 "โอกาสหลุดรอดจากการต่อสู้"
  MOD_SHIP_DISENGAGE_CHANCE_REDUCTION:0 "ลดโอกาสในการหลุดรอด"
+ MOD_SHIP_DISENGAGE_OPPORTUNITIES_ADD:0 "โอกาสหลุดพ้น"
  MOD_SHIP_EVASION_MULT:0 "การหลบหลีก"
  MOD_SHIP_EVASION_ADD:1 "โอกาสในการหลบหลีก"
  MOD_SHIP_ACCURACY_MULT:0 "ความแม่นยำ"
  MOD_SHIP_ACCURACY_ADD:0 "โอกาสในการโจมตีโดนเป้าหมาย"
- MOD_SHIP_SENSOR_RANGE_MULT:0 "ระยะของเซนเซอร์ตรวจจับ"
+ MOD_SHIP_SENSOR_RANGE_MULT:0 "ระยะของเซ็นเซอร์ตรวจจับ"
  MOD_SHIP_WINDDOWN_MULT:1 "เวลาคูลดาวน์ไฮเปอร์จั้ม"
  MOD_SHIP_WINDUP_MULT:1 "เวลาในการชาร์จไฮเปอร์จั้ม"
  MOD_SHIP_INTERSTELLAR_SPEED_MULT:1 "ความเร็วเหนือแสง (FTL)"
@@ -355,8 +360,8 @@
  MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE:1 "พลังโจมตีจากการทิ้งระเบิดจากวงโคจร"
  MOD_SHIP_ORBITAL_BOMBARDMENT_MULT:0 "$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$"
  MOD_PLANET_ADD_SPACEPORT:0 "เพิ่มช่องก่อสร้างสำหรับสิ่งปลูกสร้างในวงโคจร"
- MOD_PLANET_SENSOR_RANGE_ADD:0 "ระยะของเซนเซอร์ดาวเคราะห์"
- MOD_PLANET_SENSOR_RANGE_MULT:0 "ระยะของเซนเซอร์ดาวเคราะห์"
+ MOD_PLANET_SENSOR_RANGE_ADD:0 "ระยะของเซ็นเซอร์ดาวเคราะห์"
+ MOD_PLANET_SENSOR_RANGE_MULT:0 "ระยะของเซ็นเซอร์ดาวเคราะห์"
  MOD_PLANET_COLONY_DEVELOPMENT_SPEED_MULT:1 "ความเร็วในการพัฒนาอาณานิคม"
  MOD_PLANET_BUILDING_TIME_MULT:0 "เวลาก่อสร้าง"
  MOD_PLANET_CLEAR_BLOCKER_TIME_MULT:0 "เวลาในการเคลียร์สิ่งกีดขวาง"
@@ -379,6 +384,8 @@
  MOD_PLANET_BORDER_MULT:0 "Planet Border Extrusion"
  MOD_COUNTRY_BORDER_FRICTION_MULT:0 "ความขัดแย้งขอบชายแดน"
  MOD_PLANET_BUILDING_BUILD_SPEED_MULT:1 "ความเร็วในการก่อสร้างบนดาวเคราะห์"
+ MOD_PLANETARY_ASCENSION_EFFECT_MULT:0 "เอฟเฟกต์การยกระดับของดาวเคราะห์"
+ MOD_PLANETARY_ASCENSION_COST_MULT:0 "ค่าใช้จ่ายในการยกระดับของดาวเคราะห์"
  mod_planet_structures_cost_mult:0 "ค่าใช้จ่ายของเขตและสิ่งปลูกสร้าง"
  mod_planet_structures_upkeep_mult:0 "ค่าบำรุงรักษาเขตและสิ่งปลูกสร้าง"
  mod_planet_buildings_cost_mult:0 "ค่าสิ่งปลูกสร้าง"
@@ -595,6 +602,7 @@
  mod_country_ethic_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_power_projection_influence_produces_add:1 "£influence£ $influence$ สูงสุดจาก $country_power_projection$"
  mod_country_power_projection_influence_produces_mult:1 "£influence£ $influence$ จาก $country_power_projection$"
+ mod_resolution_category_divinity_vote_strength_mult:0 "Voting Strength on $resolution_category_divinity$ Resolutions"
  mod_pop_ethic_pacifist_attraction_mult:0 "การดึงดูดจริยธรรมที่รักสันติ"
  mod_pop_ethic_militarist_attraction_mult:0 "การดึงดูดจริยธรรมที่ชอบสงคราม"
  mod_pop_ethic_materialist_attraction_mult:0 "การดึงดูดจริยธรรมวัตถุนิยม"
@@ -623,6 +631,7 @@
  mod_shipsize_cruiser_build_speed_mult:0 "ความเร็วในการสร้างยานลาดตระเวน"
  mod_shipsize_battleship_build_speed_mult:0 "ความเร็วในการสร้างยานประจัญบาน"
  mod_shipsize_colonizer_build_speed_mult:0 "ความเร็วในการสร้างยานอาณานิคม"
+ mod_shipsize_frigate_build_speed_mult:0 "ความเร็วในการสร้าง$frigate$"
  mod_ship_corvette_cost_mult:0 "ค่าใช้จ่ายในการสร้างยานคอร์เวต"
  mod_ship_destroyer_cost_mult:0 "ค่าใช้จ่ายในการสร้างยานพิฆาต"
  mod_ship_cruiser_cost_mult:0 "ค่าใช้จ่ายในการสร้างยานลาดตระเวน"
@@ -638,9 +647,12 @@
  mod_ship_terraform_station_cost_mult:0 "ค่าใช้จ่ายในการสร้างสถานีปรับสภาพดาว"
  mod_ship_wormhole_station_cost_mult:0 "ค่าใช้จ่ายในการสร้างสถานีรูหนอน"
  mod_ship_observation_station_cost_mult:0 "ค่าใช้จ่ายในการสร้างสถานีสังเกตการณ์"
+ mod_ship_frigate_cost_mult:0 "ค่าใช้จ่ายในการสร้าง$frigate$"
  mod_shipsize_corvette_upkeep_mult:0 "ค่าบำรุงรักษายานคอร์เวต"
  mod_shipsize_corvette_hull_mult:0 "HP ยานคอร์เวต"
  mod_shipsize_corvette_hull_add:0 "$mod_shipsize_corvette_hull_mult$"
+ mod_shipsize_frigate_hull_add:0 "HP $frigate$"
+ mod_shipsize_frigate_hull_mult:0 "$mod_shipsize_frigate_hull_add$"
  mod_shipsize_destroyer_upkeep_mult:0 "ค่าบำรุงรักษายานพิฆาต"
  mod_shipsize_destroyer_hull_mult:0 "HP ยานพิฆาต"
  mod_shipsize_destroyer_hull_add:0 "$mod_shipsize_destroyer_hull_mult$"
@@ -667,7 +679,7 @@
  mod_shipsize_wormhole_station_upkeep_mult:0 "ค่าบำรุงรักษาสถานีรูหนอน"
  mod_shipsize_observation_station_upkeep_mult:0 "ค่าบำรุงรักษาสถานีสังเกตการณ์"
  mod_ship_military_station_small_cost_mult:0 "ค่าใช้จ่ายในการสร้างแพลตฟอร์มป้องกัน"
- mod_shipsize_military_station_small_upkeep_mult:1 "ค่าบำรุงรักษาแพลตฟอร์มป้องกัน"
+ mod_ship_military_station_small_upkeep_mult:1 "ค่าบำรุงรักษาแพลตฟอร์มป้องกัน"
  mod_shipsize_military_station_small_hull_mult:0 "HP แพลตฟอร์มป้องกัน"
  mod_shipsize_military_station_small_hull_add:0 "$mod_shipsize_military_station_small_hull_mult$"
  mod_shipsize_military_station_small_build_speed_mult:0 "ความเร็วในการสร้างแพลตฟอร์มป้องกัน"
@@ -687,6 +699,9 @@
  mod_weapon_type_strike_craft_weapon_fire_rate_mult:0 "ความเร็วในการโจมตีของยานลูก"
  mod_weapon_type_strike_craft_speed_mult:0 "ความเร็วของยานลูก"
  mod_weapon_swarm_weapon_fire_rate_mult:0 "Prethoryn Swarm Weapon Attack Speed"
+ mod_weapon_type_space_fauna_weapon_damage_mult:0 "Space Fauna Weapon Damage"
+ mod_weapon_type_space_fauna_weapon_fire_rate_mult:0 "Space Fauna Weapon Attack Speed"
+ mod_shroud_delve_cooldown:0 "คูลดาวน์การล้วงหาข้อมูลสิ่งที่แอบซ่อน"
  vultaum_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
  vultaum_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะล้มเหลว (จักรวรรดิแรกเริ่ม)"
  vultaum_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
@@ -1407,10 +1422,10 @@
  mod_BIOLOGICAL_species_trait_points_add:0 "$species_trait_points_add$"
  mod_pc_machine_habitability:0 "การอยู่อาศัยได้ในโลกเครื่องจักร"
  mod_pc_hive_habitability:0 "การอยู่อาศัยได้ในโลกที่เป็นรัง"
- MOD_POSTFIX_PERCENT:0 "§G%§!"
+ MOD_POSTFIX_PERCENT:1 "%"
  SPECIES_TRAIT_PICKS:0 "คุณลักษณะของเผ่าพันธุ์ที่สามารถเลือกได้"
  mod_BIOLOGICAL_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (สิ่งมีชีวิต)"
- mod_MECHANICAL_species_trait_picks_add:0 "Mechanical $SPECIES_TRAIT_PICKS$"
+ mod_ROBOT_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (จักรกล)"
  mod_MACHINE_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (เครื่องจักร)"
  mod_HUM_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (มนุษย์)"
  mod_MAM_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (เลี้ยงลูกด้วยน้ำนม)"
@@ -1422,8 +1437,10 @@
  mod_PLANT_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (พืช)"
  mod_LITHOID_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (หิน)"
  mod_AQUATIC_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (มีชีวิตอยู่ใต้น้ำ)"
- MOD_COUNTRY_SENSOR_RANGE_ADD:0 "ระยะเซนเซอร์ของจักรวรรดิ"
- MOD_SHIP_SENSOR_RANGE_ADD:0 "ระยะของเซนเซอร์"
+ MOD_COUNTRY_SENSOR_RANGE_ADD:0 "ระยะเซ็นเซอร์ของจักรวรรดิ"
+ MOD_SHIP_SENSOR_RANGE_ADD:0 "ระยะของเซ็นเซอร์"
+ MOD_GOVERNMENT_ELECTION_YEARS_ADD:0 "Years between Elections"
+ MOD_GOVERNMENT_ELECTION_YEARS_MULT:0 "$MOD_GOVERNMENT_ELECTION_YEARS_ADD$"
  MOD_COUNTRY_IMMIGRATION_PULL_ADD:0 "ดึงการอพยพย้ายเข้าจักรวรรดิ"
  MOD_COUNTRY_IMMIGRATION_PULL_MULT:0 "$MOD_COUNTRY_IMMIGRATION_PULL_ADD$"
  MOD_COUNTRY_EMIGRATION_PUSH_ADD:0 "ผลักดันการอพยพย้ายออกจักรวรรดิ"
