--- a/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
@@ -478,9 +478,9 @@
  MACHINE_fossil_plural:0 "rusted components"
  MACHINE_remnant:0 "circuit board"
  MACHINE_remnant_plural:0 "circuit boards"
- LITHOID:0 "Lithoid"
+ LITHOID:0 "หิน"
  LITHOID_desc:0 "Species Class has no effect on your Empire, but Lithoid-class Species may consider other Lithoids to be less alien than other Species Classes."
- LITHOID_plural:0 "Lithoids"
+ LITHOID_plural:0 "หิน"
  LITHOID_insult_01:1 "coprolite"
  LITHOID_insult_plural_01:1 "coprolites"
  LITHOID_compliment_01:0 "gem"
