--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -270,7 +270,7 @@
  edict_tracking_implants_desc:0 "Mandatory subdermal implants record movement and actions, greatly enhancing our empire's internal security. Loyal citizens have nothing to hide from the government."
  edict_thought_enforcement:0 "การบังคับความคิด"
  edict_thought_enforcement_desc:0 "Telepaths monitoring the citizenry for incorrect thoughts will make corrections as they find them."
- edict_thought_enforcement_effect:0 "Encryption: §G+1§!\nHappiness: §R-10%§!\nGoverning Ethics Attraction: §G+25%§!\n$planet_telepaths$ provide §G-5§! Crime"
+ edict_thought_enforcement_effect:1 "Encryption: §G+1§!\nHappiness: §R-10%§!\nGoverning Ethics Attraction: §G+25%§!\n$planet_telepaths$ provide §G-30§! Crime"
  edict_synaptic_reinforcement:0 "เสริมกำลังโครงข่ายประสาท"
  edict_synaptic_reinforcement_desc:0 "Reinforces our Synaptic Nodes as central foci in our colonies, increasing their ability to provide for nearby drones."
  edict_synaptic_reinforcement_tooltip:0 "§Y$building_hive_node$§! gain 1 §Y$job_maintenance_drone$§! job but their upkeep is increased by £energy£ §R+2§!."
@@ -310,7 +310,7 @@
  asset_veteran_desc:0 "An injured war veteran that was lost in the wheels of bureaucracy. We came to their aid."
  asset_internal_organs:0 "Internal Organs"
  asset_internal_organs_desc:0 "Hands-on knowledge of the functioning of our adversaries' anatomy can be remarkably useful during all manner of espionage operations."
- asset_synapse_drone:0 "โดรนไซแนปส์"
+ asset_synapse_drone:0 "โดรนไซแน็ป"
  asset_synapse_drone_desc:0 "Operatives can use this deviant synapse drone to receive thoughts from the hive."
  asset_ephapse_relay:0 "Ephapse Relay"
  asset_ephapse_relay_desc:0 "This malformed ephapse relay can be used to alter messages received by the hive."
