--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -103,12 +103,12 @@
  specialist_conversion_monthly_cost:1 "Monthly Cost for Overlord: $COST$"
  specialist_bulwark_overlord_modifier:0 "Bulwark Advisory"
  specialist_bulwark_overlord_modifier_desc:0 "§LAdvisors from our Bulwark specialists contribute to the efficient construction of our own defense.§!"
- specialist_bulwark_subject_modifier:0 "Bulwark"
+ specialist_bulwark_subject_modifier:0 "ฐานที่มั่นอวกาศ"
  specialist_bulwark_subject_modifier_desc:0 "§LOur unwavering focus on stellar defense has given us unique insights into the construction of impregnable fortresses.§!"
  specialist_scholarium_overlord_modifier:0 "Scholarium Advisory"
- specialist_scholarium_subject_modifier:0 "Scholarium"
+ specialist_scholarium_subject_modifier:0 "วิชาการ"
  specialist_prospectorium_overlord_modifier:0 "Prospectorium Advisory"
- specialist_prospectorium_subject_modifier:0 "Prospectorium"
+ specialist_prospectorium_subject_modifier:0 "เหมืองแร่"
  leader_trait_scholarium_investigator:0 "Scholarium Investigator"
  leader_trait_scholarium_investigator_desc:1 "Scholarium specialists view the universe as one large puzzle, waiting to be solved."
  leader_trait_scholarium_explorer:0 "Scholarium Explorer"
@@ -236,11 +236,11 @@
  EXPANSION_TITHE_COST:0 "Overlord expansion tithe: $PERCENT$"
  specialist_none:0 "None"
  specialist_none_desc:0 "The Subject will not have any Specialization."
- specialist_bulwark:0 "Bulwark"
+ specialist_bulwark:0 "ฐานที่มั่นอวกาศ"
  specialist_bulwark_desc:0 "The Subject will specialize in defensive capabilities, in exchange for weaker resource production."
- specialist_scholarium:0 "Scholarium"
+ specialist_scholarium:0 "วิชาการ"
  specialist_scholarium_desc:0 "The Subject will specialize in research, in exchange for weaker military capabilities."
- specialist_prospectorium:0 "Prospectorium"
+ specialist_prospectorium:0 "เหมืองแร่"
  specialist_prospectorium_desc:1 "The Subject will specialize in mining and strategic resources, in exchange for weaker research production."
  preset_vassal:0 "Vassal"
  preset_vassal_oppressive:0 "$preset_vassal$"
@@ -256,10 +256,10 @@
  preset_vassal_benevolent_desc:0 "$preset_vassal_desc$"
  preset_vassal_benevolent_flavor_desc:0 "$preset_vassal_flavor_desc$"
  preset_tributary:0 "Tributary"
- preset_bulwark:0 "Bulwark"
- preset_scholarium:0 "Scholarium"
+ preset_bulwark:0 "ฐานที่มั่นอวกาศ"
+ preset_scholarium:0 "วิชาการ"
  preset_protectorate:0 "Protectorate"
- preset_prospectorium:0 "Prospectorium"
+ preset_prospectorium:0 "เหมืองแร่"
  preset_scion:0 "Scion"
  preset_subsidiary:0 "Subsidiary"
  preset_subsidiary_oppressive:0 "$preset_subsidiary$"
@@ -836,6 +836,9 @@
  r_living_metal:0 "£sr_living_metal£ §Y$sr_living_metal$§!"
  r_dark_matter:0 "£sr_dark_matter£ §Y$sr_dark_matter$§!"
  r_zro:0 "£sr_zro£ §Y$sr_zro$§!"
+ r_nanites:0 "£nanites£ §Y$nanites$§!"
+ r_strategic:0 "§Yทรัพยากรเชิงยุทธศาสตร์§! £rare_crystals£ £exotic_gases£ £volatile_motes£"
+ r_strategic_plural:0 "§Yทรัพยากรเชิงยุทธศาสตร์§! £rare_crystals£ £exotic_gases£ £volatile_motes£"
  resource_subsidies_basic:1 "Basic"
  resource_subsidies_advanced:1 "Advanced"
  resource_subsidies_research:1 "Research"
@@ -965,12 +968,12 @@
  ResourceDiscovery3:0 "Our early analysis of [Root.GetName] uncovered a basic research center around a hole on the surface that led to a massive underground cavern. With the research center and its machinery entirely unsalvageable, we have refocused on surveying the cavern."
  ResourceDiscovery4:0 "After an exhaustive survey of the surface of [Root.GetName] we discovered a probe that was engaged in an intensive scan of the region. No matter what we do or how we try to interfere, the probe will inevitably return to that one spot to continue its operations. Following its pattern of behavior, we have begun to survey the ground beneath."
  ResourceDiscovery5:0 "We have come across an old and ruined mining or research station at [Root.GetName]. It seems likely that this crashed to the surface at some point in the past. It also shows signs of having been attacked. Despite the extensive damage, the station is continuing to direct a signal underground. Before moving on, we should no doubt investigate this further."
- ResourceDiscoveryEnergy1:0 "It seems to have been attached to an electric current running below the surface, the origin of which remains unclear.  What’s more, we have no way to determine how long the current will last, or if it is entirely stable, but we believe we can make use of it."
+ ResourceDiscoveryEnergy1:0 "It seems to have been attached to an electric current running below the surface, the origin of which remains unclear.  What's more, we have no way to determine how long the current will last, or if it is entirely stable, but we believe we can make use of it."
  ResourceDiscoveryEnergy2:0 "It appears to have been built to keep an archaic generator alive and hidden just below the surface, and despite all the equipment problems one might expect the generator appears to be running fine. With some work, we should be able to stabilize it and make use of it ourselves."
  ResourceDiscoveryEnergy3:0 "When we looked further into the mysterious generator, we found it is attached to several large cables running throughout [Root.GetName]. The whole thing seems to be run by a single apparatus housed far below the surface. With only a slight modification to the current, we can probably make use of the energy it creates."
- ResourceDiscoveryMinerals1:0 "The generator is attached to a mineral vein buried below ground, once probably an important source of raw material for whoever was in charge of the machine’s operations. Though somewhat diminished, we can make use of these resources ourselves."
+ ResourceDiscoveryMinerals1:0 "The generator is attached to a mineral vein buried below ground, once probably an important source of raw material for whoever was in charge of the machine's operations. Though somewhat diminished, we can make use of these resources ourselves."
  ResourceDiscoveryMinerals2:0 "Further exploration revealed the generator is connected to a dim grotto complete with several smaller veins of minerals. Scattered about the floor were the bodies of a previously unknown lithoid species. It is unclear if they were harvesting the minerals or eating them straight from the ground, but in either case the bodies are encrusted with mineral protrusions that may well prove useful to us."
- ResourceDiscoveryMinerals3:0 "The generator is built within a gigantic underground chamber, filled to the brim with minerals of all kinds. Emptying the grotto is going to be an endeavor in itself. Digging is likely to result in the need to push deeper into the world’s crust."
+ ResourceDiscoveryMinerals3:0 "The generator is built within a gigantic underground chamber, filled to the brim with minerals of all kinds. Emptying the grotto is going to be an endeavor in itself. Digging is likely to result in the need to push deeper into the world's crust."
  ResourceDiscoveryAlloys1:0 "Further exploration of the area revealed it is connected to an ancient apparatus somehow still continuing its operations. Using the resources on hand, the machine continues to spit out well-forged and entirely pristine bricks of useful alloys."
  ResourceDiscoveryAlloys2:0 "We have uncovered an odd storage facility filled with battered ship parts. Though the parts themselves are unsalvageable, we could possibly reuse some of the materials."
  ResourceDiscoveryAlloys3:0 "Extended surveys of the region led to the discovery of a hangar bay hidden deep below ground. Around the rooms we find several decayed ships, with no signs of whoever once owned them. Though recreating the ships that once stood in the hangar will be difficult, we should be able to salvage the parts for our own purposes."
@@ -982,12 +985,12 @@
  ResourceDiscoveryVolatileMotes3:0 "The chamber leading us further underground, we eventually came across a grotto filled with toxic waste, slowly eating away at the ground. Though dangerous, it seems to be the source of the volatile motes we discovered earlier. We should be able to make use of these, as long as we are careful with the stabilization process."
  ResourceDiscoveryExoticGases1:0 "For some reason, it seems to be connected to a waste disposal site deep below the ground. The site is so ancient that it will likely prove impossible to speculate on its origins, but we believe we can harvest some of these toxic gases for our own purposes."
  ResourceDiscoveryExoticGases2:0 "It seems to have been attached to a crowded research facility centered around a natural occurrence of toxic gases stemming from the core of [Root.GetName]. Readjusting the facility somewhat should allow us to harvest these for ourselves."
- ResourceDiscoveryExoticGases3:0 "It led further below the surface where we came across a machine of incredible proportions, probably once used to stabilize [Root.GetName], but now damaged beyond repair. Though unsalvageable, the machine’s damaged state has led to the creation of several toxic gases that we might make use of."
+ ResourceDiscoveryExoticGases3:0 "It led further below the surface where we came across a machine of incredible proportions, probably once used to stabilize [Root.GetName], but now damaged beyond repair. Though unsalvageable, the machine's damaged state has led to the creation of several toxic gases that we might make use of."
  ResourceDiscoveryZro1:0 "As we continued to follow it, we found a source of zro buried deep below the surface. Exotic harvesting tools littered the chamber floor, and with a little ingenuity we should be able to make use of them ourselves."
  ResourceDiscoveryZro2:0 "It is connected to a defunct facility hidden in the depths below. The facility itself appears intended to survey a zro impact site. Though empty and largely offline, it should eventually be possible to reuse it for our own purposes."
- ResourceDiscoveryDarkMatter1:0 "Through a complex process, it seems to be attached to a research drone. Circling a micro black hole located far below the planet’s surface the drone has somehow managed to stabilize the singularity, perhaps in an effort to research it. Though we are unable to replicate this technological feat, we should be able to utilize the drone for our own means."
+ ResourceDiscoveryDarkMatter1:0 "Through a complex process, it seems to be attached to a research drone. Circling a micro black hole located far below the planet's surface the drone has somehow managed to stabilize the singularity, perhaps in an effort to research it. Though we are unable to replicate this technological feat, we should be able to utilize the drone for our own means."
  ResourceDiscoveryLivingMetal1:0 "We have discovered that it leads to a chamber further below the surface. There we chanced upon a beguiling amalgamation of living metal and what we believe was once a molluscoid creature. It seems the two have fused together, slowly expanding through the cavern networks below the ground. With some effort, we should be able to start chipping pieces off the metal, for our own uses, without doing the creature too much harm."
- ResourceDiscoveryLivingMetal2:0 "It didn’t take long for us to find the living metal is centered on a narrow grotto. As it slithers and reacts to touch, we believe it might be more alive than one might first think. If we harvest it carefully, we should be able to maximize our use of the creature, without killing it."
+ ResourceDiscoveryLivingMetal2:0 "It didn't take long for us to find the living metal is centered on a narrow grotto. As it slithers and reacts to touch, we believe it might be more alive than one might first think. If we harvest it carefully, we should be able to maximize our use of the creature, without killing it."
  prospectorium_resource_discovery_desc:0 "We have picked up on signals indicating there might be more valuable resources to be uncovered at [prospectorium_discovery_target.System.GetName]. We have sent some preliminary drones to scour the region - so it will be ready for further analysis and work when we can send a ship there."
  PROSPECTORIUM_RESOURCE_DISCOVERY_ENERGY:0 "Resource Discovery - Energy"
  PROSPECTORIUM_RESOURCE_DISCOVERY_ENERGY_DESC:0 "$prospectorium_resource_discovery_desc$"
