--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -167,7 +167,7 @@
  IMPERIALIST_SUPREMACY_TRADITION_DESC:0 "Adopting any Traditions emphasizing §YSupremacy§! will please the [Root.GetName]."
  IMPERIALIST_SLAYER:0 "เลวีอาธานสเลเยอร์"
  IMPRERIALIST_NOT_SLAYER:0 "$IMPERIALIST_SLAYER$"
- IMPERIALIST_SLAYER_DESC:0 "Destroying a space-dwelling §YLeviathan§! will please the [Root.GetName] for a time."
+ IMPERIALIST_SLAYER_DESC:1 "Destroying a space-dwelling §YLeviathan§! will please the [Root.GetName]."
  IMPERIALIST_UNDERLING:0 "เป็นบริวาร"
  IMPERIALIST_NOT_UNDERLING:0 "$IMPERIALIST_UNDERLING$"
  IMPERIALIST_UNDERLING_DESC:0 "Being the subject of a foreign §YOverlord§! will greatly displease the [Root.GetName]."
@@ -186,6 +186,15 @@
  IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY:0 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
  IMPERIALIST_ADOPT_OPPRESSIVE_SUBJUGATION_POLICY:0 "$IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY$"
  IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "An iron fist in an iron glove. Making sure that our subjects know their place will please the [Root.GetName]."
+ IMPERIALIST_FEDERATION:0 "$military_federation$"
+ IMPERIALIST_FEDERATION_NOT_MILITARIST:0 "$military_federation$"
+ IMPERIALIST_FEDERATION_DESC:0 "Being a member of a $military_federation$ will please the [Root.GetName]."
+ IMPERIALIST_FLEET_USAGE_HIGH:0 "High Naval Capacity Usage"
+ IMPERIALIST_FLEET_USAGE_NOT_HIGH:0 "$IMPERIALIST_FLEET_USAGE_HIGH$"
+ IMPERIALIST_FLEET_USAGE_HIGH_DESC:0 "Building our fleet out to our empire's capacity will please the [Root.GetName]."
+ IMPERIALIST_FLEET_USAGE_LOW:0 "Low Naval Capacity Usage"
+ IMPERIALIST_FLEET_USAGE_NOT_LOW:0 "$IMPERIALIST_FLEET_USAGE_LOW$"
+ IMPERIALIST_FLEET_USAGE_LOW_DESC:0 "Maintaining a fleet well below our empire's capacity will significantly displease the [Root.GetName]."
  ISOLATIONIST_PHILOSOPHY:0 "การป้องกันที่แข็งแกร่ง"
  ISOLATIONIST_PHILOSOPHY_DESC:1 "การไม่อนุญาตให้ใช้ §Yสงครามที่ไม่จำกัด§! จะทำให้ [Root.GetName] พอใจ"
  ISOLATIONIST_NO_PHILOSOPHY:0 "$ISOLATIONIST_PHILOSOPHY$"
@@ -288,6 +297,12 @@
  TRADITIONALIST_RELIGIOUS_FINDING:0 "ความสบายกายสบายใจในอดีต"
  TRADITIONALIST_NO_RELIGIOUS_FINDING:0 "$TRADITIONALIST_RELIGIOUS_FINDING$"
  TRADITIONALIST_RELIGIOUS_FINDING_DESC:0 "Finding religious significance in Minor Artifacts will please the [Root.GetName] for a time."
+ TRADITIONALIST_FEDERATION:0 "$spiritualist_federation$"
+ TRADITIONALIST_FEDERATION_NOT_SPIRITUALIST:0 "$spiritualist_federation$"
+ TRADITIONALIST_FEDERATION_DESC:0 "Being a member of a $spiritualist_federation$ will please the [Root.GetName]."
+ TRADITIONALIST_FEDERATION_ANTI:0 "$research_federation$"
+ TRADITIONALIST_FEDERATION_ANTI_NOT_RESEARCH:0 "$research_federation$"
+ TRADITIONALIST_FEDERATION_ANTI_DESC:0 "Being a member of a $research_federation$ will displease the [Root.GetName]."
  TECHNOLOGIST_ROBOTS:0 "รักเครื่องจักร"
  TECHNOLOGIST_ROBOTS_DESC:0 "Maintaining a population of at least §Y6§! Robotic Pops will please the [Root.GetName]."
  TECHNOLOGIST_FEW_ROBOTS:0 "$TECHNOLOGIST_ROBOTS$"
@@ -315,6 +330,12 @@
  TECHNOLOGIST_PRECURSOR_SECRETS:0 "ความลับของจักรวรรดิแรกเริ่ม"
  TECHNOLOGIST_NO_PRECURSOR_SECRETS:0 "$TECHNOLOGIST_PRECURSOR_SECRETS$"
  TECHNOLOGIST_PRECURSOR_SECRETS_DESC:0 "Unraveling the ancient mysteries of the precursors will please the [Root.GetName]."
+ TECHNOLOGIST_FEDERATION:0 "$research_federation$"
+ TECHNOLOGIST_FEDERATION_NOT_RESEARCH:0 "$research_federation$"
+ TECHNOLOGIST_FEDERATION_DESC:0 "Being a member of a $research_federation$ will please the [Root.GetName]."
+ TECHNOLOGIST_FEDERATION_ANTI:0 "$spiritualist_federation$"
+ TECHNOLOGIST_FEDERATION_ANTI_NOT_SPIRITUALIST:0 "$spiritualist_federation$"
+ TECHNOLOGIST_FEDERATION_ANTI_DESC:0 "Being a member of a $spiritualist_federation$ will displease the [Root.GetName]."
  PROGRESSIVE_NO_AUTO:0 "ต่อต้านเผด็จการ"
  PROGRESSIVE_AUTO:0 "$PROGRESSIVE_NO_AUTO$"
  PROGRESSIVE_DEMOCRATIC_GOVERNMENT_DESC:1 "A nominally elected government will please the [Root.GetName]."
@@ -339,6 +360,9 @@
  PROGRESSIVE_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
  PROGRESSIVE_BENEVOLENT_NO_OPPRESSIVE_SUBJUGATION_POLICY:0 "$PROGRESSIVE_BENEVOLENT_SUBJUGATION_POLICY$"
  PROGRESSIVE_BENEVOLENT_NO_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "Our subjects look to us for guidance and protection, and we should strive to repay their trust by respecting their liberties. Adopting a benevolent approach to subjugation will please the [Root.GetName]."
+ PROGRESSIVE_FEDERATION:0 "$hegemony_federation$"
+ PROGRESSIVE_FEDERATION_NOT_HEGEMONY:0 "$hegemony_federation$"
+ PROGRESSIVE_FEDERATION_DESC:0 "Being a member of a $hegemony_federation$ will displease the [Root.GetName]."
  TOTALITARIAN_AUTOCRACY:0 "อัตตาธิปไตย"
  TOTALITARIAN_AUTOCRACY_DESC:0 "ปกครองแบบเผด็จการ - มีระบอบการปกครองเป็น §Yจักรพรรดิ หรือ เผด็จการ§! - จะทำให้ [Root.GetName] ชอบ"
  TOTALITARIAN_NO_AUTOCRACY:0 "$TOTALITARIAN_AUTOCRACY$"
@@ -372,9 +396,12 @@
  TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
  TOTALITARIAN_NO_BENEVOLENT_SUBJUGATION_POLICY:0 "$TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY$"
  TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY_DESC:0 "A firm [Owner.Species.GetHandName] is required to guide our subjects, lest they grow indolent and complacent. Granting them too many liberties will displease the [Root.GetName]."
- TOTALITARIAN_OPPRESSIVE_SUBJUGATION_POLICY:0 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
+ TOTALITARIAN_OPPRESSIVE_SUBJUGATION_POLICY:1 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
  TOTALITARIAN_ADOPT_OPPRESSIVE_SUBJUGATION_POLICY:0 "$TOTALITARIAN_OPPRESSIVE_SUBJUGATION_POLICY$"
  TOTALITARIAN_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "Like [Owner.Species.GetSpawnNamePlural], our subjects need guidance if they are to learn discipline. Keeping them on a short leash will please the [Root.GetName]."
+ TOTALITARIAN_FEDERATION:0 "$hegemony_federation$"
+ TOTALITARIAN_FEDERATION_NOT_HEGEMONY:0 "$hegemony_federation$"
+ TOTALITARIAN_FEDERATION_DESC:0 "Being a member of a $hegemony_federation$ will please the [Root.GetName]."
  PROSPERITY_PHILOSOPHY:0 "ท่าทีป้องกัน/ตั้งรับ"
  PROSPERITY_PHILOSOPHY_DESC:0 "Restricting our policies to §YDefensive Wars Only§! will please the [Root.GetName]."
  PROSPERITY_NO_PHILOSOPHY:0 "$PROSPERITY_PHILOSOPHY$"
@@ -405,6 +432,9 @@
  PROSPERITY_PEACEFUL_APPLICATIONS:0 "ความสงบสุขของสังคม"
  PROSPERITY_NO_PEACEFUL_APPLICATIONS:0 "$PROSPERITY_PEACEFUL_APPLICATIONS$"
  PROSPERITY_PEACEFUL_APPLICATIONS_DESC:0 "Expending Minor Artifacts for civil applications will please the [Root.GetName] for a time."
+ PROSPERITY_FEDERATION:0 "$military_federation$"
+ PROSPERITY_FEDERATION_NOT_MILITARIST:0 "$military_federation$"
+ PROSPERITY_FEDERATION_DESC:0 "Being a member of a $military_federation$ will displease the [Root.GetName]."
  FACTION_COUNTRY_SEPARATIST:0 "[parameter:owner.GetSpeciesAdj] Separatists"
  FACTION_ACTION_SUPPRESS_FOLLOWERS:0 "Suppress Followers"
  FACTION_ACTION_SUPPRESS_FOLLOWERS_DESC:0 "Making life difficult for sympathizers can be an effective deterrent."
