--- a/mod/thmod/localisation/english/ship_browser_l_english.yml
+++ b/mod/thmod/localisation/english/ship_browser_l_english.yml
@@ -7,6 +7,7 @@
  SHIP_GRAPHICS_ZOOM_OUT_TOOLTIP:0 "§Gเลื่อนปุ่ม Scroll Wheel ไปข้างหลัง§! เพื่อซูมออก"
  SHIP_GRAPHICS_ROTATE_TOOLTIP:0 "กด §Gปุ่มเมาส์-ขวา§! ค้างแล้วลากที่โมเดลตัวยานเพื่อหมุน"
  SHIP_GRAPHICS_CORVETTE_DESC:0 "คอร์เวต เป็นยานรบคลาสแรกของจักรวรรดิ มีความรวดเร็วว่องไวและราคาถูก"
+ SHIP_GRAPHICS_FRIGATE_DESC:0 "ฟริเกตเป็นรุ่นขั้นสูงกว่าของคอร์เวต เชี่ยวชาญด้านการปล่อยตอร์ปิโด พวกมันอาจช้ากว่าและเปราะบางกว่า แต่สามารถทำลายล้างเป้าหมายขนาดใหญ่ได้"
  SHIP_GRAPHICS_DESTROYER_DESC:1 "ยานพิฆาต เปลี่ยนจากความคล่องตัวและความเร็วของยานคอร์เวต แล้วไปเพิ่มพลังการยิงและตัวยานที่หนาขึ้นแทน"
  SHIP_GRAPHICS_CRUISER_DESC:0 "ยานลาดตระเวณสามารถใช้งานได้หลากหลายและทนทาน สามารถดูดซับและทำความเสียหายได้"
  SHIP_GRAPHICS_BATTLESHIP_DESC:0 "ยานประจัญบานมีราคาแพงแต่ทรงพลัง ด้วยระยะการยิงที่ยอดเยี่ยม พวกเขาเก่งในการสร้างความเสียหายให้ฝ่ายตรงข้ามก่อนที่พวกเขาจะโจมตีกลับ"
