--- a/mod/thmod/localisation/english/clone_army_l_english.yml
+++ b/mod/thmod/localisation/english/clone_army_l_english.yml
@@ -2,7 +2,7 @@
  clone_soldier:0 "ทหารโคลน"
  origin_clone_army:0 "กองทัพโคลน"
  origin_clone_army_desc:0 "A species of short-lived and infertile soldier clones exceptionally proficient in matters of war, left masterless and alone to question their engineered purpose and uncertain fate."
- origin_tooltip_clone_army_effects:0 "- เริ่มต้นด้วยการมีสิ่งปลูกสร้าง £building£ §H$building_clone_army_clone_vat$§! จำนวน §Y2§! แห่ง ในดาวบ้านเกิดของคุณ ซึ่งจะทำให้สามารถผลิตประชากร £pops£ §Y$clone_soldier$§! ได้\n- §R§Hในจักรวรรดิมีการจำกัด§! §Hโรงเก็บถังโคลนนิ่งโบราณ§! ที่ 5 แห่ง§!\n- §Hนายพลกองยานรบ§! ของกองทัพโคลน จะทำให้มี §H$MOD_SHIP_FIRE_RATE_MULT$§! เพิ่มเติม §G25%§! และลด §Hค่าบำรุงรักษายาน§! §G10%§!"
+ origin_tooltip_clone_army_effects:1 "- เริ่มต้นด้วยการมีสิ่งปลูกสร้าง £building£ §H$building_clone_army_clone_vat$§! จำนวน 2 แห่ง ในดาวบ้านเกิดของคุณ ซึ่งจะทำให้สามารถผลิตประชากร £pops£ §Y$clone_soldier$§! ได้\n- §Hในจักรวรรดิมีการจำกัด§! §Hโรงเก็บถังโคลนนิ่งโบราณ§! ที่ 5 แห่ง§!\n- §Hนายพลกองยานรบ§! ของกองทัพโคลน จะทำให้มี §H$MOD_SHIP_FIRE_RATE_MULT$§! เพิ่มเติม §G25%§! และลด §Hค่าบำรุงรักษายาน§! §G10%§!"
  trait_clone_soldier_infertile:0 "$clone_soldier$"
  trait_clone_soldier_infertile_desc:0 "§LEngineered for compliance and war: short-lived, unable to reproduce naturally, and very efficient.§!"
  trait_clone_soldier_fertile:0 "Clone Soldier Descendant"
