--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -121,6 +121,9 @@
  already_hired_trader_governor:1 "§RWe have already recruited a leader from the [fromfrom.GetName]§!."
  recruit_trader_leader:1 "Adds a [fromfrom.GetSpeciesName] §YGovernor§! with the §Y$leader_trait_enclave_trader$ trait§! to the §HLeaders§! pool."
  requires_trader_enclave:0 "§RRequires a §YTrader Enclave§! in the system.§!"
+ sm_trader_proxy_office:0 "Trader Proxy Office"
+ sm_trader_proxy_office_desc:0 "The §YTrader Enclaves§! enjoy special privileges on the Galactic Market, which can also benefit us."
+ requires_trade_enclave:0 "§RRequires a §YTrader Enclave§! in the system.§!"
  leader_trait_enclave_trader:0 "Enclave Trader"
  leader_trait_enclave_trader_desc:0 "Recruited from one of the independent merchant Enclaves, this leader is particularly adept at maximizing Trade Value."
  leviathans.131.desc:3 "The §YVolatile Mote§! is a prized Riggan condiment. It is renowned throughout the galaxy for its distinct flavor, which is unlike any other - and its explosiveness, which is also unlike any other. We sell it only to our most valued trading partners, among which we count the [Root.GetName].\n\nIf you can meet our modest price, we are willing to export Volatile Motes to you for a period of ten standard years."
@@ -865,3 +868,6 @@
  mod_planet_structures_rare_crystals_upkeep_mult:0 "ค่าบำรุงรักษาที่เป็นผลึกหายากกับสิ่งปลูกสร้างและเขต"
  mod_planet_structures_volatile_motes_upkeep_mult:0 "ค่าบำรุงรักษาที่เป็นผงแร่ระเหยกับสิ่งปลูกสร้างและเขต"
  mod_planet_structures_exotic_gases_upkeep_mult:0 "ค่าบำรุงรักษาที่เป็นก๊าซแปลกประหลาดกับสิ่งปลูกสร้างและเขต"
+ mod_planet_structures_rare_crystals_cost_mult:0 "District and Building Rare Crystals Cost"
+ mod_planet_structures_volatile_motes_cost_mult:0 "District and Building Volatile Motes Cost"
+ mod_planet_structures_exotic_gases_cost_mult:0 "District and Building Exotic Gases Cost"
