--- a/mod/thmod/localisation/english/lithoids_l_english.yml
+++ b/mod/thmod/localisation/english/lithoids_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  vo_lithoid_voice:0 "Lithoid"
- lithoid:0 "Lithoid"
+ lithoid:0 "หิน"
  MESSAGE_TERRAVORE_CONSUME_WORLD_TITLE:0 "กินโลก"
  MESSAGE_TERRAVORE_CONSUME_WORLD_MINERALS_TEXT:0 "The consumption of $PLANET|Y$ yields minerals for the swarm."
  MESSAGE_TERRAVORE_CONSUME_WORLD_ALLOYS_TEXT:0 "The consumption of $PLANET|Y$ yields alloys for the swarm."
