--- a/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
@@ -394,3 +394,6 @@
  NAME_Lost_Swarm:0 "Locust Swarm"
  NAME_Lost_Swarm_Ship:0 "Locust"
  NAME_Lost_Swarm_Adult:0 "Locust"
+ NAME_Holibrae:0 "Holibrae"
+ NAME_Holibrae_Corps:0 "Holibrae Corps"
+ NAME_Holibrae_Destroyer:0 "Holibrae Destroyer"
