--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -106,7 +106,7 @@
  sm_orbital_ring_gun_battery:0 "ปืนป้องกันดาวเคราะห์"
  sm_orbital_ring_gun_battery_desc:1 "Adds two medium-size weapon slots to the Orbital Ring.\n"
  sm_orbital_ring_missile_battery:0 "ป้อมยิงอาวุธนำวิถีที่ป้องกันดาวเคราะห์"
- sm_orbital_ring_missile_battery_desc:1 "Adds two missile weapon slots to the Orbital Ring.\n"
+ sm_orbital_ring_missile_battery_desc:2 "Adds two guided weapon slots to the Orbital Ring.\n"
  sm_orbital_ring_hangar_bay:0 "โรงเก็บเครื่องบินป้องกันดาวเคราะห์"
  sm_orbital_ring_hangar_bay_desc:1 "Adds a hangar for Strike Craft to the Orbital Ring.\n"
  FLEETORDER_ENTERING_BYPASS:1 "Transiting via $BYPASS_TYPE|H$ to $SYSTEM|H$: $DAYS|Y0$ Days"
@@ -116,27 +116,39 @@
  MOD_COUNTRY_MIA_TIME_MULT:1 "Reduced time spent Missing In Action while we own $hyper_relay_plural$"
  OPEN_ORBITAL_RING:0 "เปิดสถานีอวกาศวงแหวนโคจร"
  OPEN_PLANET_VIEW:0 "Open Planet View"
- sm_ring_energy_hub:0 "Stratospheric Ionization Elements"
+ sm_ring_energy_hub:0 "เครื่องสตราโตสเฟียร์ไอออไนเซชัน"
  sm_ring_energy_hub_desc:1 "These devices dramatically reduce power loss during distribution, increasing overall generator output."
- sm_ring_food_hub:0 "Climate Optimization Stations"
+ sm_ring_food_hub:0 "สถานีปรับสภาพอากาศ"
  sm_ring_food_hub_desc:1 "Detailed monitoring of local conditions means we can influence the planet's climate at a regional level, increasing agricultural yields."
- sm_ring_minerals_hub:0 "Low Gravity Mega-Refiners"
+ sm_ring_minerals_hub:0 "ศูนย์สกัดแร่แรงโน้มถ่วงต่ำ"
  sm_ring_minerals_hub_desc:1 "Centralizing mineral refining operations on the Orbital Ring allows for novel techniques that increase mining efficiency."
- sm_ring_consumer_goods_hub:0 "Orbital Logistics Systems"
+ sm_ring_consumer_goods_hub:0 "ระบบลอจิสติกส์วงโคจร"
  sm_ring_consumer_goods_hub_desc:0 "Transferring logistics operations to automated systems on the Orbital Ring allows planetside $planet_buildings_factories$ to run continuously at full speed."
- sm_ring_alloys_hub:0 "Alloy Processing Facilities"
+ sm_ring_alloys_hub:0 "เครื่องอำนวยความสะดวกในการแปรรูปโลหะผสม"
  sm_ring_alloys_hub_desc:1 "Alloys from the surface are further processed in orbit, creating usable materials from what would otherwise be wasted by-products."
  sm_ring_trade_hub:0 "ห้างสรรพสินค้าขนาดใหญ่"
  sm_ring_trade_hub_desc:1 "Moving all shopping and trade facilities to the Orbital Ring means our Clerks can facilitate more business, more effectively than ever before."
  sm_ring_trade_hub_effect:0 "£amenities£ ความอยู่ดีกินดีจาก £job_clerk£ $job_clerk_plural$: §G+1§!"
- sm_ring_bureaucracy_hub:0 "ระบบการจัดเก็บข้อมูลวงโคจร"
+ sm_ring_bureaucracy_hub:0 "ระบบการจัดเก็บข้อมูลบนสถานีวงโคจร"
  sm_ring_bureaucracy_hub_desc:1 "Efficiency and progress can be ours once more, now that our Administrators have near instant access to the paperwork that defines their lives."
- sm_ring_synapse_hub:0 "Synaptic Relays"
+ sm_ring_synapse_hub:0 "ไซแน็ปติกรีเลย์"
  sm_ring_synapse_hub_desc:0 "Portions of the Orbital Ring have been modified to enhance synaptic signals, improving control over drones on the surface."
  sm_ring_synapse_hub_effect:1 "£unity£ เอกภาพจาก £job_synapse_drone£ $job_synapse_drone_plural$: §G+1§!"
- sm_ring_maintenance_hub:0 "Orbital Maintenance Drops"
+ sm_ring_maintenance_hub:0 "เครื่องดรอปของซ่อมบำรุงจากสถานีวงโคจร"
  sm_ring_maintenance_hub_desc:0 "Prepackaged pods of maintenance material - and the drones necessary to distribute them - can be dropped from orbit anywhere they are needed, at a moment's notice."
  sm_ring_maintenance_hub_effect:0 "£amenities£ ความอยู่ดีกินดีจาก £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
+ sm_ring_psi_corps:0 "หน่วยทหารพลังจิตบนสถานีวงโคจร"
+ sm_ring_psi_corps_desc:0 "A segment of the Orbital Ring is devoted to training psi-gifted individuals, allowing the Psi Corps to keep a watchful eye on the planet below.\n\n§YThe Psi Corps is your friend. Trust the Corps.§!\n\n$job_telepath_effect_desc$\n"
+ sm_ring_orbital_shield_generator:0 "เครื่องกำเนิดโล่พลังงานของสถานีวงโคจร"
+ sm_ring_orbital_shield_generator_desc:0 "Hardening the shields of the orbital defenses will interfere with any planetary shields, but will allow them to hold off against more powerful weapons."
+ sm_ring_galactic_stock_exchange:0 "ตลาดหลักทรัพย์ของสถานีวงโคจร"
+ sm_ring_galactic_stock_exchange_desc:0 "$building_galactic_stock_exchange_desc$\n\n$job_merchant_effect_desc$\n"
+ sm_ring_embassy_complex:0 "ศูนย์กลางสถานทูตของสถานีวงโคจร"
+ sm_ring_embassy_complex_desc:0 "This orbital complex is intended to awe the viewer, rendering them more compliant in negotiations.\n\nDue to the need to be close to the seat of government, it can only be built in orbit of our Capital.\n"
+ sm_ring_noble_estates:0 "อสังหาริมทรัพย์คนชั้นสูง"
+ sm_ring_noble_estates_desc:0 "Magnificent structures that take advantage of reduced gravitational effect in orbit house the local nobility. Significant portions of the ring are dedicated to their every whim.\n\n$job_noble_effect_desc$\n"
+ sm_ring_slave_processing_facility:0 "ฮับแปรรูปทาส(สถานีวงโคจร)"
+ sm_ring_slave_processing_facility_desc:0 "An orbital facility used to process slave labor for the planet below. Those that have been processed have any trace of free will extinguished. \n\n$building_slave_processing_slave_army_effect_desc$$building_slave_processing_migrate_effect_desc$\n"
  over.1.name:0 "$quantum_catapult_1$"
  over.1.desc:1 "The first stage of our $quantum_catapult_3$ is now complete. A precise arrangement of torsion lenses gains charge from the star, and can release this energy in an erratic fashion to send ships across great distances."
  over.5.name:0 "$quantum_catapult_2$"
@@ -172,16 +184,16 @@
  over.100.a:1 "A proud day for all."
  over.100.b:1 "Profit without borders!"
  over.100.c:0 "We shall see."
- edict_relay_network_dummy:0 "Networked Relays"
+ edict_relay_network_dummy:0 "เครือข่ายรีเรย์"
  edict_relay_network_dummy_desc:0 "The Relay Network can be directed to serve our colonies."
  edict_relay_network_dummy_tooltip:0 "Adds Strategic Resource upkeep to the Hyper Relays in exchange for providing additional effects to colonies in the same system."
- edict_relay_network_stability:0 "Networked Dominance"
+ edict_relay_network_stability:0 "การปกครองแบบเครือข่าย"
  edict_relay_network_stability_desc:0 "The Relay Network can be used to more effectively impose our will over our colonies."
  relay_network_stability_edict_modifier:0 "$edict_relay_network_stability$"
- edict_relay_network_movement:0 "Networked Movement"
+ edict_relay_network_movement:0 "การเคลื่อนย้ายแบบเครือข่าย"
  edict_relay_network_movement_desc:0 "The Relay Network can be enhanced with regular shuttle flights to encourage the internal migration of pops."
  relay_network_movement_edict_modifier:0 "$edict_relay_network_movement$"
- edict_relay_network_amenities:0 "Networked Amenities"
+ edict_relay_network_amenities:0 "ความอยู่ดีกินดีแบบเครือข่าย"
  edict_relay_network_amenities_desc:0 "The Relay Network can be repurposed to transmit government approved entertainment to the masses."
  relay_network_amenities_edict_modifier:0 "$edict_relay_network_amenities$"
  edict_relay_network_amenities_gestalt:0 "$edict_relay_network_amenities$"
