--- a/mod/thmod/localisation/english/plantoids_l_english.yml
+++ b/mod/thmod/localisation/english/plantoids_l_english.yml
@@ -51,18 +51,26 @@
  TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT:0 "แทนที่ §Y50%§! ของ £food£ §Yอาหาร§! ที่ใช้บำรุงรักษา ด้วย £energy£ §Yพลังงาน§!"
  trait_plantoid_radiotrophic:0 "สังเคราะห์รังสี"
  trait_plantoid_radiotrophic_desc:0 "§LThis species is sustained by a combination of both food and low-energy radiation, and as such can thrive on the most inhospitable of worlds.§!"
- TRAIT_PLANTOID_RADIOTROPHIC_EFFECT:0 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\nประชากรที่อาศัยอยู่บน §Yโลกแห่งความตาย§! จะไม่มีการบำรุงรักษาที่เป็น £energy£ §Yพลังงาน§!\nการเพิ่มจำนวนของประชากรบน §Yโลกแห่งความตาย§! §G+10%§!\nการอยู่อาศัยได้บนโลกแห่งความตาย: §G+10%§!"
+ TRAIT_PLANTOID_RADIOTROPHIC_EFFECT:1 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\nการบำรุงรักษาที่เป็น £energy£ §Yพลังงาน§! ถูกลบออกสำหรับประชากรที่อาศัยอยู่บน §Yโลกแห่งความตาย§!\nการเพิ่มจำนวนของประชากรบน §Yโลกแห่งความตาย§!  §G+10%§!\nการอยู่อาศัยได้บนโลกแห่งความตาย: §G+10%§!"
  trait_harvested_radiotrophic:0 "$trait_plantoid_radiotrophic$"
  trait_harvested_radiotrophic_desc:0 "$trait_plantoid_radiotrophic_desc$"
  trait_lithoid_radiotrophic:0 "$trait_plantoid_radiotrophic$"
  trait_lithoid_radiotrophic_desc:0 "$trait_plantoid_radiotrophic_desc$"
- TRAIT_LITHOID_RADIOTROPHIC_EFFECT:0 "Replaces §Y50%§! of Base £minerals£ §YMinerals§! Upkeep with £energy£ §YEnergy§! Upkeep.\nPops living on §YTomb Worlds§! have no £energy£ §YEnergy§! Upkeep.\nPop Growth Speed on §YTomb Worlds§! §G+10%§!\nTomb World Habitability: §G+10%§!"
+ TRAIT_LITHOID_RADIOTROPHIC_EFFECT:1 "Replaces §Y50%§! of Base £minerals£ §YMinerals§! Upkeep with £energy£ §YEnergy§! Upkeep.\nThis £energy£ §YEnergy§! Upkeep is removed for Pops living on §YTomb Worlds§!.\nPop Growth Speed on §YTomb Worlds§! §G+10%§!\nTomb World Habitability: §G+10%§!"
  trait_plantoid_budding:0 "แตกหน่อ"
  trait_plantoid_budding_desc:0 "§Lเผ่าพันธุ์นี้มีความสามารถในการขยายพันธุ์โดยการแตกหน่อ นอกเหนือจากการปฏิสนธิของเมล็ดหรือสปอร์ตามปกติ§!"
  trait_lithoid_budding:0 "Crystallization"
  trait_lithoid_budding_desc:0 "§LWith crystalline growths, this species is capable of generating self replicating lattices of themselves, in addition to the more usual reproductive methods.§!"
  TRAIT_PLANTOID_BUDDING_EFFECT:1 "แต่ละประชากรที่ทำงานเป็นทาสหรือสูงกว่าจะผลิต £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! 0.02\n\nโบนัสที่เพิ่มขึ้นนี้จะไปเพิ่ม$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$กับแหล่งอื่นๆได้อีกด้วย เช่น £building£ §H$building_clone_vats$§! หรือ £job_spawning_drone£ §H$job_spawning_drone_plural$§!"
  TRAIT_LITHOID_BUDDING_EFFECT:0 "$TRAIT_PLANTOID_BUDDING_EFFECT$\n\nThe §H$trait_lithoid$ Trait§! modifies this trait's effects."
+ trait_advanced_phototrophic:0 "$trait_plantoid_phototrophic$"
+ trait_advanced_phototrophic_desc:0 "§LThrough advanced genetic engineering, this species is now partially sustained by sunlight.§!"
+ TRAIT_ADVANCED_PHOTOTROPHIC_EFFECT:0 "Replaces §Y50%§! of Base £food£ §YFood§! or £minerals£ §YMineral§! Upkeep with £energy£ §YEnergy§! Upkeep."
+ trait_advanced_radiotrophic:0 "$trait_plantoid_radiotrophic$"
+ trait_advanced_radiotrophic_desc:0 "§LThrough advanced genetic engineering, this species is now partially sustained by low-energy radiation, and as such can thrive on the most inhospitable of worlds.§!"
+ TRAIT_ADVANCED_RADIOTROPHIC_EFFECT:0 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\nThis £energy£ §YEnergy§! Upkeep is removed for Pops living on §YTomb Worlds§!."
+ trait_advanced_budding:0 "$trait_plantoid_budding$"
+ trait_advanced_budding_desc:0 "§LChanges to their DNA sequence allow this species to reproduce by budding, in addition to the more conventional methods.§!"
  civic_catalytic_processing:0 "ตัวเร่งปฏิกิริยาแปรสภาพ"
  civic_catalytic_processing_desc:0 "By focusing their industrial efforts on catalytic chemistry, this civilization has unlocked the key to using organic materials in the construction of spacebound structures."
  civic_tooltip_catalytic_processing_effects:0 "แทนที่ £job_foundry£ §Y$job_foundry_plural$§! ด้วย £job_catalytic_technician£ §Y$job_catalytic_technician_plural$§! $job_catalytic_technician_effect_desc$"
