--- a/mod/thmod/localisation/english/ship_sections_l_english.yml
+++ b/mod/thmod/localisation/english/ship_sections_l_english.yml
@@ -25,17 +25,17 @@
  CONSTRUCTOR_MID_M1S1:1 "Construction Ship"
  CONSTRUCTOR_MID_S3:0 "Developer Core"
  CONSTRUCTOR_MID_MU1:0 "Fuser Core"
- CORVETTE_MID_M1S1:2 "Missile Boat"
+ CORVETTE_MID_M1S1:3 "Torpedo Boat"
  CORVETTE_MID_S3:1 "Interceptor"
  CORVETTE_MID_S1:1 "Shifter Core"
  CORVETTE_MID_S2PD1:0 "Picket Ship"
  CRUISER_BOW_L1:1 "Artillery Bow"
- CRUISER_BOW_M1S2:2 "Missile Bow"
+ CRUISER_BOW_M1S2:3 "Torpedo Bow"
  CRUISER_BOW_M2:1 "Broadside Bow"
  CRUISER_MID_S2HB:1 "Hangar Core"
  CRUISER_MID_L1M1:1 "Artillery Core"
  CRUISER_MID_M3:1 "Broadside Core"
- CRUISER_MID_M2S2:2 "Missile Core"
+ CRUISER_MID_M2S2:3 "Torpedo Core"
  CRUISER_STERN_M1:1 "Broadside Stern"
  CRUISER_STERN_S2:1 "Gunship Stern"
  DESTROYER_BOW_M1S2:1 "Gunship Bow"
@@ -58,7 +58,7 @@
  HEAVY_LARGE_MILITARY_STATION_SECTION:0 "Heavy Station Section"
  HANGAR_LARGE_MILITARY_STATION_SECTION:0 "Hangar Station Section"
  OUTPOST_STATION_SECTION:0 "Frontier Outpost Core"
- MISSILE_DEFAULT:0 "Missile Section"
+ MISSILE_DEFAULT:1 "Torpedo Section"
  DEFAULT_CONSTRUCTION_SECTION:1 "Construction Ship"
  DEFAULT_COLONIZATION_SECTION:1 "Colony Ship"
  DEFAULT_SCIENCESHIP_SECTION:1 "Science Ship"
