--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -873,8 +873,10 @@
  OFF_WAR_EXHAUSTION_SUM_AT_LEAST:0 "การรุกราน ความอิดโรยจากสงคราม รวม $VAL0|2Y$ อย่างน้อย $COMPARE$ $VAL1|2Y$"
  DEF_WAR_EXHAUSTION_SUM_LESS_THAN:0 "การป้องกัน ความอิดโรยจากสงคราม รวม $VAL0|2Y$ น้อยกว่า $COMPARE$ $VAL1|2Y$"
  DEF_WAR_EXHAUSTION_SUM_AT_LEAST:0 "การป้องกัน ความอิดโรยจากสงคราม รวม $VAL0|2Y$ อย่าน้อย $COMPARE$ $VAL1|2Y$"
- GALAXY_PERCENTAGE_LESS_THAN:1 "Galaxy percentage $VAL0|2Y$ is NOT $COMPARE$ $VAL1|2Y$"
- GALAXY_PERCENTAGE_AT_LEAST:1 "Galaxy percentage $VAL0|2Y$ is $COMPARE$ $VAL1|2Y$"
+ GALAXY_PERCENTAGE_LESS_THAN:2 "Galaxy percentage ($VAL0|2Y$) is NOT $COMPARE$ $VAL1|2Y$"
+ GALAXY_PERCENTAGE_AT_LEAST:2 "Galaxy percentage ($VAL0|2Y$) is $COMPARE$ $VAL1|2Y$"
+ ADDITIONAL_CRISIS_STRENGTH_NOT_TRIGGER:0 "Additional Crisis Strength ($VAL0|2Y$) is NOT $COMPARE$ $VAL1|2Y$"
+ ADDITIONAL_CRISIS_STRENGTH_TRIGGER:0 "Additional Crisis Strength ($VAL0|2Y$) is $COMPARE$ $VAL1|2Y$"
  SPECIES_PLANET_SLAVE_PERCENTAGE_LESS_THAN:0 "$SPECIES$ planet slave percentage less than $COMPARE$ $VAL1|2Y$"
  SPECIES_PLANET_SLAVE_PERCENTAGE_AT_LEAST:0 "$SPECIES$ planet slave percentage at least $COMPARE$ $VAL1|2Y$"
  HAS_SPACEPORT_MODULE:0 "Spaceport has the $MODULE|Y$ module upgrade.\n"
@@ -960,20 +962,22 @@
  TRIGGER_RELATIVE_POWER_NOT:1 "พลังอำนาจโดยรวมของ §Y$COUNTRY$§! ไม่$COMPARE$ หรือ $VALUE$ §Y$WHO$§!"
  NOR_TRIGGER_STARTS:0 "ทั้งหมดต้องเป็นเท็จ"
  NAND_TRIGGER_STARTS:0 "One or more must be false"
- HAS_FORMER_CITIZENSHIP_TYPE:0 "Former citizenship type was: $SPECIES_RIGHT|Y$"
- HAS_NOT_FORMER_CITIZENSHIP_TYPE:0 "Former citizenship type was NOT: $SPECIES_RIGHT|Y$"
- HAS_FORMER_LIVING_STANDARD_TYPE:0 "Former living standard type was: $SPECIES_RIGHT|Y$"
- HAS_NOT_FORMER_LIVING_STANDARD_TYPE:0 "Former living standard type was NOT: $SPECIES_RIGHT|Y$"
- HAS_FORMER_MILITARY_SERVICE_TYPE:0 "Former military service type was: $SPECIES_RIGHT|Y$"
- HAS_NOT_FORMER_MILITARY_SERVICE_TYPE:0 "Former military service type was NOT: $SPECIES_RIGHT|Y$"
- HAS_FORMER_POPULATION_CONTROL_TYPE:0 "Former population control type was: $SPECIES_RIGHT|Y$"
- HAS_NOT_FORMER_POPULATION_CONTROL_TYPE:0 "Former population control type was NOT: $SPECIES_RIGHT|Y$"
- HAS_FORMER_MIGRATION_CONTROL_TYPE:0 "Former migration control type was: $SPECIES_RIGHT|Y$"
- HAS_NOT_FORMER_MIGRATION_CONTROL_TYPE:0 "Former migration control type was NOT: $SPECIES_RIGHT|Y$"
- HAS_FORMER_SLAVERY_TYPE:0 "Former slavery type was: $SPECIES_RIGHT|Y$"
- HAS_NOT_FORMER_SLAVERY_TYPE:0 "Former slavery type was NOT: $SPECIES_RIGHT|Y$"
- HAS_FORMER_PURGE_TYPE:0 "Former purge type was: $SPECIES_RIGHT|Y$"
- HAS_NOT_FORMER_PURGE_TYPE:0 "Former purge type was NOT: $SPECIES_RIGHT|Y$"
+ HAS_FORMER_SPECIES_RIGHT_CITIZENSHIP_TYPE:0 "Former citizenship type was: $SPECIES_RIGHT|Y$"
+ HAS_NOT_FORMER_SPECIES_RIGHT_CITIZENSHIP_TYPE:0 "Former citizenship type was NOT: $SPECIES_RIGHT|Y$"
+ HAS_FORMER_SPECIES_RIGHT_LIVING_STANDARDS_TYPE:0 "Former living standard type was: $SPECIES_RIGHT|Y$"
+ HAS_NOT_FORMER_SPECIES_RIGHT_LIVING_STANDARD_TYPE:0 "Former living standard type was NOT: $SPECIES_RIGHT|Y$"
+ HAS_FORMER_SPECIES_RIGHT_MILITARY_SERVICE_TYPE:0 "Former military service type was: $SPECIES_RIGHT|Y$"
+ HAS_NOT_FORMER_SPECIES_RIGHT_MILITARY_SERVICE_TYPE:0 "Former military service type was NOT: $SPECIES_RIGHT|Y$"
+ HAS_FORMER_SPECIES_RIGHT_POPULATION_CONTROLS_TYPE:0 "Former population control type was: $SPECIES_RIGHT|Y$"
+ HAS_NOT_FORMER_SPECIES_RIGHT_POPULATION_CONTROLS_TYPE:0 "Former population control type was NOT: $SPECIES_RIGHT|Y$"
+ HAS_FORMER_SPECIES_RIGHT_MIGRATION_CONTROLS_TYPE:0 "Former migration control type was: $SPECIES_RIGHT|Y$"
+ HAS_NOT_FORMER_SPECIES_RIGHT_MIGRATION_CONTROLS_TYPE:0 "Former migration control type was NOT: $SPECIES_RIGHT|Y$"
+ HAS_FORMER_SPECIES_RIGHT_COLONIZATION_CONTROL_TYPE:0 "Former colonization control type was: $SPECIES_RIGHT|Y$"
+ HAS_NOT_FORMER_SPECIES_RIGHT_COLONIZATION_CONTROL_TYPE:0 "Former colonization control type was NOT: $SPECIES_RIGHT|Y$"
+ HAS_FORMER_SPECIES_RIGHT_SLAVERY_TYPE_TYPE:0 "Former slavery type was: $SPECIES_RIGHT|Y$"
+ HAS_NOT_FORMER_SPECIES_RIGHT_SLAVERY_TYPE_TYPE:0 "Former slavery type was NOT: $SPECIES_RIGHT|Y$"
+ HAS_FORMER_SPECIES_RIGHT_PURGE_TYPE:0 "Former purge type was: $SPECIES_RIGHT|Y$"
+ HAS_NOT_FORMER_SPECIES_RIGHT_PURGE_TYPE:0 "Former purge type was NOT: $SPECIES_RIGHT|Y$"
  CAN_LIVE_ON_PLANET:0 "Can live on $PLANET|Y$"
  CAN_NOT_LIVE_ON_PLANET:0 "Cannot live on $PLANET|Y$"
  TRIGGER_HAS_INVALID_CIVIC:2 "Has inactive $CIVIC|Y$ Civic"
@@ -1073,7 +1077,7 @@
  CREATE_WORMHOLE_STATION:0 "Create a wormhole station\n"
  UNLOCKS_NEXT_TECH:0 "Unlocks technology $TECH|Y$ in the $TREE|Y$ Tree.\n"
  ALL_OWNED_POPS:1 "All Owned Pops"
- CHANGE_NAME:0 "Sets the name of the $SCOPE|Y$"
+ CHANGE_NAME:1 "Changes the name of the $SCOPE|Y$"
  CHANGE_ADJECTIVE:0 "Sets the adjective of the $SCOPE|Y$"
  CHANGE_SHIP_PREFIX:0 "Sets the ship prefix of the $SCOPE|Y$"
  ADD_TECHNOLOGY:0 "Adds a random technology in the $TECHAREA|Y$ tree."
@@ -1478,7 +1482,7 @@
  HAS_NOT_FEDERATION_LAW:0 "$FEDERATION|Y$ has NOT enacted $LAW|Y$"
  HAS_FEDERATION_PERK:0 "$FEDERATION|Y$ has picked $PERK|Y$"
  HAS_NOT_FEDERATION_PERK:0 "$FEDERATION|Y$ has NOT picked $PERK|Y$"
- SET_FEDERATION_TYPE:0 "Set $TYPE|Y$ for $FEDERATION|Y$"
+ SET_FEDERATION_TYPE:1 "$FEDERATION|Y$ is converted into a $TYPE|Y$"
  HAS_FEDERATION_TYPE:0 "$FEDERATION|Y$ is $TYPE|Y$"
  HAS_NOT_FEDERATION_TYPE:0 "$FEDERATION|Y$ is NOT $TYPE|Y$"
  DESTROY_ESPIONAGE_OPERATION_EFFECT:0 "Concludes the $NAME|Y$ espionage operation."
@@ -1620,6 +1624,7 @@
  TRIGGER_ROBOT_SPECIES_NOT:0 "$SPECIES|Y$ ไม่ใช่เผ่าพันธุ์หุ่นยนต์"
  any_enslaved_species_trigger:1 "Any species with enslaved pops"
  any_owned_species_trigger:1 "Any owned species"
+ count_enslaved_species_trigger:0 "Number of species with enslaved pops$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  any_fleet_in_system_trigger:1 "Any fleet in system"
  any_owned_fleet_trigger:1 "Any owned fleet"
  any_fleet_in_orbit_trigger:1 "Any fleet in orbit"
@@ -1723,6 +1728,8 @@
  NUM_AI_EMPIRES_AT_LEAST:0 "Number of AI empires ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
  GALAXY_SIZE_IS:0 "ขนาดกาแล็กซีคือ $SIZE|Y$"
  GALAXY_SIZE_IS_NOT:0 "ขนาดกาแล็กซีไม่ใช่ $SIZE|Y$"
+ GALAXY_SHAPE_IS:0 "Galaxy Shape is $SHAPE|Y$"
+ GALAXY_SHAPE_IS_NOT:0 "Galaxy Shape is NOT $SHAPE|Y$"
  HAS_HAPPINESS_TRIGGER:0 "มีความสุข"
  HAS_NOT_HAPPINESS_TRIGGER:0 "ไม่มีความสุข"
  IS_IN_BREACH_OF_TRIGGER:0 "ได้ละเมิดมติ $RESOLUTION$"
@@ -1753,6 +1760,8 @@
  HAS_PLANETARY_ASCENSION_TIER:0 "ระดับของดาวเคราะห์ $COMPARATOR$ $TIER|Y$"
  HAS_NOT_PLANETARY_ASCENSION_TIER:0 "ระดับของดาวเคราะห์ ไม่$COMPARATOR$ $TIER|Y$"
  SET_PLANETARY_ASCENSION_TIER:0 "ระดับของดาวเคราะห์เปลี่ยนเป็น $TIER|Y$"
+ NUM_PLANETARY_ASCENSION_TIERS:0 "ระดับของดาวเคราะห์ทั้งหมด $COMPARATOR$ $TIER|Y$"
+ NUM_PLANETARY_ASCENSION_TIERS_NOT:0 "ระดับของดาวเคราะห์ทั้งหมด ไม่$COMPARATOR$ $TIER|Y$"
  HAS_DEFENSIVE_ARMY_STRENGTH:0 "Garrison Strength is $COMPARATOR$ $VALUE|Y$"
  HAS_NOT_DEFENSIVE_ARMY_STRENGTH:0 "Garrison Strength is NOT $COMPARATOR$ $VALUE|Y$"
  HAS_PATH_TRIGGER:0 "$COUNTRY|Y$ follows the $PATH|Y$ Crisis Path"
