--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -53,7 +53,7 @@
  describe_machine_worlds:6 "- §Yโลกเครื่องจักร§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อสิ่งมีชีวิตส่วนใหญ่ แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวเครื่องจักร§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§! และ §Yการใช้ที่อยู่อาศัย§! ลดลง §G10%§! เขต £district£ §Yเขตเกษตรกรรม§! บนดาวจะถูกทำลาย"
  allow_hive_worlds:0 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! โลกที่เป็นรัง"
  describe_hive_worlds:1 "- §Yโลกที่เป็นรัง§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อประชากรที่ไม่ใช่สิ่งมีชีวิตจิตสำนึกร่วม แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§! และ §Yเขตรัง§! มีประสิทธิภาพมากขึ้น\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวที่เป็นรัง§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§!"
- ALLOW_PSI_CORPS:0 "The §H$building_psi_corps$§! building is now available."
+ ALLOW_PSI_CORPS:1 "ปลดล็อกสิ่งปลูกสร้าง: §Y$building_psi_corps$§!"
  ALLOW_PSI_ARMIES:0 "§H$psionic_army_plural$§! can now be recruited."
  dyson_sphere_0_MEGASTRUCTURE_DETAILS:1 "A §Y$dyson_sphere_5$§! fully envelops a given star, converting all solar output directly to £energy£ Energy Credits."
  dyson_sphere_0_CONSTRUCTION_INFO_DELAYED:4 "A $dyson_sphere_5$ will blot out the sun, turning all planets in the system into Barren or Frozen Worlds.\n\nAny Terraforming Candidates in the system will be ruined."
@@ -69,8 +69,8 @@
  dyson_sphere_4_DESC:0 "A partially operational Dyson Sphere - §Y75%§! energy generation efficiency."
  dyson_sphere_5:0 "ทรงกลมไดสัน"
  dyson_sphere_5_DESC:0 "A fully operational Dyson Sphere - §G100%§! energy generation efficiency."
- spy_orb_0_MEGASTRUCTURE_DETAILS:1 "ขั้นของ §Y$spy_orb_4$§! จะค่อยๆขยายช่วงเซนเซอร์จนในที่สุดก็ครอบคลุมทั้งกาแล็กซี"
- spy_orb_0_CONSTRUCTION_INFO_DELAYED:3 "ขั้นของ $spy_orb_4$ จะค่อยๆขยายช่วงเซนเซอร์จนในที่สุดก็ครอบคลุมทั้งกาแล็กซี"
+ spy_orb_0_MEGASTRUCTURE_DETAILS:1 "ขั้นของ §Y$spy_orb_4$§! จะค่อยๆขยายช่วงเซ็นเซอร์จนในที่สุดก็ครอบคลุมทั้งกาแล็กซี"
+ spy_orb_0_CONSTRUCTION_INFO_DELAYED:3 "ขั้นของ $spy_orb_4$ จะค่อยๆขยายช่วงเซ็นเซอร์จนในที่สุดก็ครอบคลุมทั้งกาแล็กซี"
  spy_orb_0:0 "อาร์เรย์สังเกตุการณ์กาแล็กซี (ขั้นที่0:ที่ตั้ง)"
  spy_orb_0_DESC:0 "The construction station serves as the base for the future assembly of a Sentry Array."
  spy_orb_1:0 "อาร์เรย์สังเกตุการณ์กาแล็กซี (ขั้นที่1:ฮับ)"
@@ -141,6 +141,48 @@
  trait_cybernetic_desc:0 "§LThis species has embraced cybernetics on such a scale that its members may be considered cyborgs. They routinely replace their organic body parts with more advanced mechanical versions.§!\n"
  trait_latent_psionic:0 "พลังจิตแฝง"
  trait_latent_psionic_desc:0 "§LThis species has latent psionic abilities, which are dormant in most of its members. Although quite rare, these powers will manifest in some leaders.§!\n"
+ trait_cyborg_power_drills:0 "Power Drills"
+ trait_cyborg_power_drills_desc:0 "§LOutfit a cyborg with a battery of power drills, and suddenly everything looks like a mineral deposit.§!"
+ trait_cyborg_harvesters:0 "Harvesters"
+ trait_cyborg_harvesters_desc:0 "§LA suite of tools, from nutrient solution diagnostics and on-site balancing to per-stalk micro-threshing, enables cybernetic workers to increase produce yields.§!"
+ trait_cyborg_superconductive:0 "Superconductive"
+ trait_cyborg_superconductive_desc:0 "§LThe use of superconductive materials in units have cut energy transmission losses to zero percent.§!"
+ trait_cyborg_efficient_processors:0 "Efficient Processors"
+ trait_cyborg_efficient_processors_desc:0 "§LThese highly efficient processors increase the both workload and endurance.§!"
+ trait_cyborg_logic_engines:0 "Logic Engines"
+ trait_cyborg_logic_engines_desc:0 "§LEfficiently navigating the increasingly complex frontiers of science requires parallel processors to augment organic brains.§!"
+ trait_cyborg_loyalty_circuits:0 "Loyalty Circuits"
+ trait_cyborg_loyalty_circuits_desc:0 "§LLoyalty as an ideal is a distinctly organic concept. It is much more efficient to simply program compliance.§!\n"
+ trait_cyborg_double_jointed:0 "Double-Jointed"
+ trait_cyborg_double_jointed_desc:0 "§LCollapsible labor units with flexible joints enable them to fold neatly into stacks during transportation, then self-assemble on site.§!\n"
+ trait_cyborg_bulky:0 "Bulky"
+ trait_cyborg_bulky_desc:0 "§LThese highly advanced mega-machines were not designed to traverse the universe in a box.§!\n"
+ trait_cyborg_enhanced_memory:0 "Enhanced Memory"
+ trait_cyborg_enhanced_memory_desc:0 "§LA revolutionary technique fits autonomous units with memory cells using a revolutionary, new technique for magnetic induction, improving their performance significantly.§!\n"
+ trait_cyborg_durable:0 "Durable"
+ trait_cyborg_durable_desc:0 "§LProtected by exoskeletons of chrome-plated titanium, these heavy-duty machines were designed to excel under harsh conditions and require less maintenance.§!\n"
+ trait_cyborg_high_maintenance:0 "High Maintenance"
+ trait_cyborg_high_maintenance_desc:0 "§LThese machines were designed with a complete disregard for longevity and are prone to malfunction. They will require frequent maintenance.§!\n"
+ trait_cyborg_learning_algorithms:0 "Learning Algorithms"
+ trait_cyborg_learning_algorithms_desc:0 "§LSophisticated, self-learning algorithms that stimulate the rapid evolution of a unit's neural clusters.§!\n"
+ trait_cyborg_neural_limiters:0 "Neural Limiters"
+ trait_cyborg_neural_limiters_desc:0 "§LBy limiting the cognitive abilities of our workers we can encourage them to focus on more menial tasks.§!\n"
+ trait_cyborg_mass_produced:0 "Mass-Produced"
+ trait_cyborg_mass_produced_desc:0 "§LStreamlined production cycles and modular designs allow for unit mass-production at an unprecedented rate.§!\n"
+ trait_cyborg_custom_made:0 "Custom-Made"
+ trait_cyborg_custom_made_desc:0 "§LEach new unit is crafted with unparalleled attention to detail. A marvel of engineering and art, but not very efficient.§!\n"
+ trait_cyborg_recycled:0 "Recycled"
+ trait_cyborg_recycled_desc:0 "§LUnit manufacturing has been optimized to be as cost-effective as possible, using recycled materials, and components inherited from previous generations.§!\n"
+ trait_cyborg_streamlined_protocols:0 "Streamlined Protocols"
+ trait_cyborg_streamlined_protocols_desc:0 "§LExtensively batched AI processes allow these units to scale greatly with minimal loss of efficiency.§!"
+ trait_cyborg_high_bandwidth:0 "High Bandwidth"
+ trait_cyborg_high_bandwidth_desc:0 "§LIndividual units send and receive a vast amount of largely duplicate data, causing exponential lag as the number of units attached to each central processing hub increases.§!"
+ trait_cyborg_trading_algorithms:0 "Trading Algorithms"
+ trait_cyborg_trading_algorithms_desc:0 "§LPredictive algorithms allow for maximum optimization. Infinitesimal market fluctuations in currency rates, stock availability, and the emotional response of organic partners are accounted for.§!"
+ trait_cyborg_power_intensive:0 "Power Intensive"
+ trait_cyborg_power_intensive_desc:0 "§LThese cybernetic components require frequent recharging from an external power source.§!"
+ TRAIT_POWER_INTENSIVE_EFFECT:0 "Increases $r_energy$ Upkeep by §R+1§!"
+ CYBORG_ENERGY_UPKEEP_EFFECT:0 "Increases $r_energy$ Upkeep by §R+$@cyborg_energy_upkeep$§!"
  trait_psionic:0 "พลังจิต"
  trait_psionic_desc:0 "§LAll members of this species possess powerful psionic abilities. They typically communicate with each other through telepathy.§!\n"
  trait_self_modified:0 "แก้ไขตัวเอง"
